--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -3,44 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FLASHCARD</title>
+    <link rel="stylesheet" href="style.css">
+    <title>APPLICATION DE FICHES</title>
     <link
      rel="stylesheet" 
      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
-    <link rel="steelsheet" href="style.css" />
 </head>
 <body>
    <div class="container">
     <div class="add-flashcard">
-        <button id="add-flashcard">Add Flashcard</button>
+        <button id="add-flashcard">Ajouter une fiche</button>
     </div>
     <div class="card-con">
         <div class="card-list-container"></div>
     </div>
    </div>
    <div class="question-container hide" id="add-question-card">
-     <h2>Add Flashcard</h2>
+     <h2>Ajouter une fiche</h2>
      <div class="wrapper">
         <div class="error-con">
-            <span class="hide" id="error">Input fields cannot be empty</span>
+            <span class="hide" id="error">Les champs ne peuvent pas être vides</span>
         </div>
         <i class="fa-solid fa-xmark" id="close-btn"></i>
      </div>
-     <label for="question">Question</label>
+     <label for="question">Question :</label>
      <textarea 
       id="question"
-      class="input" 
+      class="textarea" 
       rows="2"  
-      placeholder="type the question here..."
+      placeholder="Écris la question ici..."
       ></textarea>
-     <label for="answer">Ansxer:</label>
+     <label for="answer">Réponse :</label>
      <textarea 
        id="answer"
-       class="input"
+       class="textarea"
        rows="2"
-       placeholder="types the answer here..."
+       placeholder="Écris la réponse ici..."
      ></textarea>
-     <button id="save-btn">save</button>
+     <button id="save-btn">Enregistrer</button>
    </div>
    <script src="script.js"></script> 
 </body>
